Updated About Me section, updated comments, and nudged buttons on Portfolio page.

--- a/Contact.html
+++ b/Contact.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <!--header matches footer CSS, due to fixed nature-->
+        <!--Header matches footer CSS, due to fixed nature-->
         <header>
             <!--CSS container "navigation" matches the CSS container for main content, because it must adjust to browser window size-->
             <div class= "navigation">                
@@ -32,7 +32,7 @@
                     Email: <br>
                     <input type= "text" name= "email" placeholder="Your Email"><br>
                     Message: <br>
-                    <textarea name= "message" placeholder="Write your message to Greg here!"></textarea><br>
+                    <textarea name= "message" placeholder="Write your message to me here."></textarea><br>
                     <input type= "submit" value= "Submit">
                 </form>
             </section>
