--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <!--header and footer code is the same across all three pages-->
+        <!--Header and Footer code for all three pages-->
         <header>
             <div class= "navigation">                
                 <h1>Greg Marmolejo</h1>
@@ -21,13 +21,13 @@
 
         <br>
 
-        <!--container CSS stays the same in all three pages; the content itself changes-->
+        <!--Container for all three pages; the content itself changes-->
         <div id="container">
             <section><h2>About Me</h2></section>
             <hr>
             <section class= "Content">
                 <img id="photoGreg" src= "assets/images/Me & Nimbus - Walker Ranch 2015.jpg" alt ="Greg and his dog Nimbus">
-                <p>I'm learning to be a web developer after a 22 year long career in Telecommunications.  I worked on several software implementations, inventories, and in quality assurance.  I'm a good team player and effective communicator</p>
+                <p>I'm learning to be a web developer after a 22 year long career in Telecommunications.  I worked on several software implementations, inventories, and in quality assurance.  I'm a good team player, an effective communicator, and I'm excited to start a new career!</p>
                     
                 <br>
                     
