--- a/portfolio.html
+++ b/portfolio.html
@@ -23,12 +23,12 @@
             <section><h2>Portfolio</h2></section>
             <hr>
 
-            <!--this container holds the images together-->
+            <!--This container holds the images together.-->
             <div class="Content">
-                <!--these sections hold the image and text together-->
+                <!--These sections hold the image and text together.-->
                 <section class= "imageContainer">
                     <a href="https://www.google.com" target="_blank">
-                        <img src= "assets/images/Button Click Exercise.png" alt= "Button Click Exercise" width= "100%" height= "100%">
+                        <img src= "assets/images/Button Click Exercise.png" alt= "Button Click Exercise" width= "100%" height= "75%">
                     <div class= "textBlock">
                         <h4>Number Counter</h4>
                     </div></a>
@@ -36,7 +36,7 @@
 
                 <section class= "imageContainer">
                     <a href="https://www.google.com" target="_blank">
-                        <img src= "assets/images/A Game of Cat and Mouse.png" alt= "Corgi RPG" width= "100%" height= "100%">
+                        <img src= "assets/images/A Game of Cat and Mouse.png" alt= "A Game of Cat and Mouse" width= "100%" height= "75%">
                     <div class= "textBlock">
                         <h4>Shooter Game</h4>
                     </div></a>
@@ -44,7 +44,7 @@
 
                 <section class= "imageContainer">
                     <a href="https://www.google.com" target="_blank">
-                        <img src= "assets/images/My First Homework Assignment.png" alt= "Kitten Trivia" width= "100%" height= "100%">
+                        <img src= "assets/images/My First Homework Assignment.png" alt= "Fast Times Fan Page" width= "100%" height= "75%">
                     <div class= "textBlock">
                         <h4>Fast Times Fan Page</h4>
                     </div></a>
