small changes throughout

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,9 +11,9 @@
             <div class= "navigation">                
                 <h1>Greg Marmolejo</h1>
                     <nav>
-                        <a href= "index.html">About</a>
-                        <a href= "contact.html">Contact</a>
-                        <a href= "portfolio.html">Portfolio</a>
+                    <a href= "index.html">About</a>
+                    <a href= "portfolio.html">Portfolio</a>
+                    <a href= "contact.html">Contact</a>
                     </nav>
             </div>
         </header>
@@ -53,6 +53,6 @@
 
             </div>
         </div>
-        <footer>Copyright &copy; 2019</footer>
+        <footer>Copyright &copy;</footer>
     </body>
 </html>
