--- a/Contact.html
+++ b/Contact.html
@@ -14,8 +14,8 @@
                 <h1>Greg Marmolejo</h1>
                     <nav>
                         <a href= "index.html">About</a>
-                        <a href= "contact.html">Contact</a>
                         <a href= "portfolio.html">Portfolio</a>
+                        <a href= "contact.html">Contact</a>
                     </nav>
             </div>
         </header>
@@ -38,6 +38,6 @@
             </section>
         </div>
 
-        <footer>Copyright &copy; 2019</footer>
+        <footer>Copyright &copy;</footer>
     </body>
 </html>
