--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
     <head>
         <title>About Me</title>
         <link rel= "stylesheet" href="assets/css/style.css">
-        <!-- <link rel= "stylesheet" href="css/reset.css" -->
     </head>
 
     <body>
-        <!--Header and Footer code for all three pages-->
+        <!--Header is the same on all three pages-->
         <header>
             <div class= "navigation">                
                 <h1>Greg Marmolejo</h1>
                 <nav>
                     <a href= "index.html">About</a>
-                    <a href= "contact.html">Contact</a>
                     <a href= "portfolio.html">Portfolio</a>
+                    <a href= "contact.html">Contact</a>
                 </nav>
             </div>
         </header>
@@ -27,15 +26,14 @@
             <hr>
             <section class= "Content">
                 <img id="photoGreg" src= "assets/images/Me & Nimbus - Walker Ranch 2015.jpg" alt ="Greg and his dog Nimbus">
-                <p>I'm learning to be a web developer after a 22 year long career in Telecommunications.  I worked on several software implementations, inventories, and in quality assurance.  I'm a good team player, an effective communicator, and I'm excited to start a new career!</p>
-                    
-                <br>
-                    
-                <p>I'm also passionate about music. I'm a singer/songwriter/guitarist, and I play in a reggae band and a country-rock band here in Austin.</p>
+                <p>I'm learning to be a web developer after a 22 year long career in Telecommunications.</p>
+                <p>I've worked on several software implementations, inventories, and in quality assurance.</p>
+                <p>I'm a good team player and an effective communicator, but most importantly I'm excited to be starting a new career!</p>
+                <p>I'm also passionate about music. I'm a singer/songwriter/guitarist, and I play in a reggae band and a country band here in Austin.</p>
             </section>
 
         </div>
 
-        <footer>Copyright &copy; 2019</footer>
+        <footer>Copyright &copy;</footer>
     </body>
 </html>
