Updated notes and made some aesthetic touchups

--- a/Contact.html
+++ b/Contact.html
@@ -7,9 +7,8 @@
     </head>
 
     <body>
-        <!--Header matches footer CSS, due to fixed nature-->
         <header>
-            <!--CSS container "navigation" matches the CSS container for main content, because it must adjust to browser window size-->
+            <!--div class navigation functions as container.  On CSS page ".navigation" matches "#container" from index page.-->
             <div class= "navigation">                
                 <h1>Greg Marmolejo</h1>
                     <nav>
