--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <br>
 
-        <!--Container for all three pages; the content itself changes-->
+        <!--Same container for all three pages.-->
         <div id="container">
             <section><h2>About Me</h2></section>
             <hr>
