--- a/portfolio.html
+++ b/portfolio.html
@@ -19,13 +19,14 @@
         </header>
         <br>
 
+        <!--Same container for all three pages.-->        
         <div id="container">
             <section><h2>Portfolio</h2></section>
             <hr>
 
-            <!--This container holds the images together.-->
+            <!--Container holding the images together.-->
             <div class="Content">
-                <!--These sections hold the image and text together.-->
+                <!--These sections pair up the images and their text.-->
                 <section class= "imageContainer">
                     <a href="https://www.google.com" target="_blank">
                         <img src= "assets/images/Button Click Exercise.png" alt= "Button Click Exercise" width= "100%" height= "75%">
